examples/invalid/20_type_alias_cycle.lane
// Invalid: transparent top-level type aliases must form an acyclic dependency
// graph. Expanding A reaches B, which reaches A again.

module Examples.Invalid20
pub type A = B
pub type B = A

pub let answer : A = 42
